--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 pygame = "^2.0.1"
 replit = "^2.0.0"
+PyJWT = "^2.0.1"
+argon2 = "^0.1.10"
+pymongo = "^3.11.3"
+dnspython = "^2.1.0"
+python-dotenv = "^0.17.0"
 
 [tool.poetry.dev-dependencies]
 
